Updates to the use case section.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -15,7 +15,7 @@ While Bitcoin's building blocks were not novel, the composition of these propert
 
 At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$67.21 billion).
 Nevertheless, there remains significant interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
-In particular, we have consistently heard researchers, businesses, and governments ask the following three questions related to Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good use cases for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
+In particular, we have consistently heard researchers, businesses, and governments ask the following three questions related to Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
 
 To answer these questions, it is insufficient to consider academic sources alone.
 While there have been several academic overviews written in this space, they have not addressed these general question regarding Blockchain technology, but rather surveyed particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
@@ -46,11 +46,10 @@ More concretely, our key contributions are,
 	Third, the provenance information and replication of that information among all miners provides significant resilience against accidental data loss or malicious modification of the data.
 	Fourth, Blockchain systems can embed executable programs that can automatically execute as appropriate and gain the benefits of Blockchain technology's other capabilities.
 	
-	\item \textbf{Identifying use cases that are most likely to benefit from Blockchain technology.}
-	We identify sixteen use cases that could leverage Blockchain technolgoy 
-	classes of applications for Blockchain technology.
-	We separate these into applications that are ideal for Blockchain technology, those that are suitable if Blockchain's key properties are needed, and those that are poor matches for Blockchain technology.
-	This list is intended to help both practitioners and researchers know where to focus their attention in this space.
+	\item \textbf{Identifying groups of applications (i.e., use cases) that are most likely to benefit from Blockchain technology.}
+	Within the literature we analyzed there was a range of potential applications for Blockchain technology.
+	We group these applications into a set of use cases, and then separate those use case based on the likelihood that individual applications within the use case would benefit from the use of Blockchain technology.
+	Example use cases include cryptocurrencies, asset management, and multi-organization data sharing.
 	
 	%TODO: These need to be updated when I work through these sections and the discussion.
 	\item \textbf{Detailing challenges and limitations related to Blockchain technology.}
@@ -62,7 +61,6 @@ More concretely, our key contributions are,
 %	We provide a taxonomy and flow chart that describes how Blockchain technology relates to other distributed databases.
 %	This taxonomy demonstrates that Blockchain technology is the most complex of the related distributed databases.
 %	As such, we recommend that applications leverage Blockchain technology only if they need the shared governance, provenance, auditability and resilience provided by Blockchain technology.
-	
 
 	
 \end{enumerate}
