--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -19,20 +19,17 @@ If the answer to both questions is no, then Blockchain's consensus protocol is l
 	\item Is it necessary to prevent malicious data deletion?
 \end{enumerate}
 
-Within the literature we analyzed, there were many uses cases identified that could benefit from the application of Blockchain technology.
-In this section, we describe these potential use cases.
-Within this section, we divide these use cases into three categories---highly suitable, somewhat suitable, and not suitable---based on the \emph{likelihood} that any given application within the use case would meet the criteria laid out above.
-Note that for any use case it is always possible to construct an application that requires Blockchain technology, so this categorization is only intended as a helpful guide as to the likelihood that an application in a given use case will benefit from Blockchain technology.
+Within the literature we analyzed, there was significant discussion about potential applications for Blockchain technology.
+Within this section, we describe these use cases.
 
-\subsection{Highly Suitable Use Cases}
-In this subsection, we describe the use case areas that are most likely to benefit from Blockchain technology.
+\subsection{Asset Management Use Cases}
 
-\paragraph{Payments and cryptocurrencies}
+\paragraph{Cryptocurrencies and electronic payments}
 It is well-known that Blockchain technology can be used to build cryptocurrencies, thus enabling electronic payments.
 Bitcoin is a working example of this, however Bitcoin has notable drawbacks that include limited throughput and privacy.
 There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency, scalable, partially offline, confidential and/or anonymous.
 
-\paragraph{Token tracking and processing}
+\paragraph{Token tracking and trading}
 Real world financial markets provide the ability for the exchange of valuable assets and tend to involve intermediaries like exchanges, brokers or dealers, clearing and settlement entities. 
 Blockchain-based assets---which either hold intrinsic value on it's own blockchain, or represent a claim on an external material or digital asset---can be transacted directly between participants or governed by smart contracts.
 Similar to payments, such transactions are resilient even when large values are at stake.
@@ -44,76 +41,70 @@ Blockchain technology can be used for tracking material assets that are globally
 \paragraph{Supply Chain Management} % Jeremy: needs better name
 Many complex devices built today require parts that are built by multiple companies, assembled into a useful whole. For heavily regulated industries, like airlines, or for military/intelligence applications, it is important to establish the source of each part that has been used, as well as a maintenance history. The benefit of a blockchain, like asset tracking, is mainly a political one (not a technical one): it enables a common environment while side-stepping the question of which entity maintains the environment. It also shares the same binding challenge.
 
-\subsubsection{Regulation/Sanctions}
-Much like the insurance use cases, regulations can be written to a Blockchain and off-chain oracles can report on real-world violations of those regulations.
-After a violation is reported, a smart contract can automatically apply the penalty or sanction for breaking the regulation.
-As the system is auditable, penalized parties have a full history of what led to their punishment, providing means for them to appeal if there was a mistake.
-
-\subsection{Suitable Use Cases}
-In this subsection, we describe the use cases that could benefit from Blockchain technology if there is a need for shared governance, provenance, and/or high-level reliability. Each of these use-cases include at least one major unresolved issue.
-
-\subsubsection{Auctions/Markets}
+\paragraph{Auctions/Markets}
 A Blockchain-based market can provide a coordination point for buyers and sellers to find each other, exchange assets, and provide price information to observers. 
 Auctions are a common mechanism for setting a fair price. 
 Decentralized markets and auction mechanisms must address the issue of non-confidential transactions and the resulting potential for front-running by participants in the blockchain network (in particular, miners).
 
-\subsubsection{Record Storage} % Jeremy: Data Provenance
-A Blockchain system's append-only ledger can be used to store documents, including the history of changes to these documents.
-This use case is best suited for records that are highly valuable (such as certificates, government licenses), that have a small data size (storage is limited and expensive in most blockchain systems), and are publicly available (by default, a blockchain does not offer confidentiality).
-A common mechanism to expand blockchain storage to large and/or confidential data is to only store succinct binding/hiding commitments to the data on the blockchain, and store the raw data itself in a less integral environment.
-For open Blockchains, the identity of the entity certifying the data is not provided for by default on a Blockchain.
+\subsection{Data Storage and Sharing Use Cases}
 
-\subsubsection{Identity Management}
-Identities along with cryptographic attestations about properties for those identities (e.g., over 18 years of age, has a driver's license) can be written to the Blockchain.
-These identities and attestations can then be used by other systems to support their access control policies.
-Importantly, this identity information comes with full provenance. This could be useful in determine suspicious activity (e.g., having an age that is not increasing linearly).
-This could also be a quicker and more performant way of establishing identity than the current certificate authority system.
+\paragraph{Permanent record storage}
+The append-only ledger is used to store documents, including the history of changes to these documents.
+This use case is best suited for records that are highly valuable (such as certificates, government licenses), that have a small data size and are publicly available (as they will be replicated by all miners).
+If large and/or confidential documents need to be stored, then the Blockchain can store binding/hiding commitments for the documents, while the documents themselves are stored in another system with lower overhead.
+%For open Blockchains, the identity of the entity certifying the data is not provided for by default on a Blockchain.
 
-\subsubsection{Gambling}
-By examining the most active Bitcoin scripts and Ethereum decentralized applications, gambling is popular. Players can audit the game to ensure that execution is fair, and the system can operate its own cryptocurrency to handle the finances (including holding the money in escrow to prevent losing parties from aborting before paying). This use case is best suited to gambling games that do not require randomness, private state, or knowledge of off-blockchain events. For the subset of residual games,\footnote{The most active Ethereum game is called Fomo3D: users pay to reset a 30 second countdown timer and if it ever reaches zero, the last user to pay wins all the money collected.} blockchain is an ideal platform. For the other types of games, new layers of technology would have be added on a Blockchain. Data-feeds (called oracles) of either randomness or real world event outcomes requires additional trust and introduces finality risk, while confidential user state require additional cryptography.  
+\paragraph{Multi-organization data sharing}
+In this use cases, organizations retain ownership and management of their data and users.
+Blockchain technology is used to allow multiple organizations to announce the data they have available, define access control rules for that data, and to record access requests related to the data.
+The systems auditability is used to ensure that all organizations are sharing data as they agreed to.
 
-% Jeremy: Watermark for me when I pick this up again. 
-
-\subsubsection{IoT/Smart Properties}
-IoT devices occasionally have the need to collectively make decisions.
-In these cases, Blockchain technology can provide a technological platform for making these collective decisions in an auditable fashion.
-This auditability is especially important as IoT devices are notoriously untrustworthy due to insufficient security, and the ability to later audit and analyze their actions is invaluable.
-Additionally, the replication inherent to Blockchain technology means that even if a subset of the IoT devices is lost (e.g., destroyed sensors in a storm), it can still be possible to record the entire provenance of all devices.
-
-\subsubsection{Insurance}
-Insurance policies can be recorded on the Blockchain.
-As off-chain oracles report on accidents and other insured events, the system can automatically begin the claim process and even pay out the insurance money upon completion of the claim.
-The auditability provides assurances to customers.
+\paragraph{Insurance}
+In this use case, an off-chain oracle is used to report on accidents and other insured events.
+As these reports are recorded, the system can automatically begin the claim process and even pay out the insurance money upon completion of the claim.
+Blockchain technology's auditability provides confidence to customers that their claims were handle appropriately.
 Additionally, having insurers collectively govern and operate this system could ensure that claims are properly settled when they involve multiple insurers.
 
-\subsubsection{Fine-grained Access Control}
-In practice, access control systems are often centralized. They are sometimes nominally distributed -- for example, requiring several written signatures on a form before a system administrator will grant a new permission -- but even these systems are essentially centralized as a single administrator can unilaterally grant nearly any privilege in the system.
-Blockchain technology's shared governance could allow for true fine-grained and decentralized access control.
-When permissions are needed, those responsible (and not an administrator) can directly approve the permissions and smart contracts can ensure that the permissions is granted if and only if all necessary approvals are given.
-Additionally, the provenance information associated with the access control can be used to rollback changes made by users if those users are later shown to have been compromised.
+\paragraph{Regulation/sanctions}
+Much like the insurance use case, regulations can be written to a Blockchain and off-chain oracles can report on real-world violations of those regulations.
+After a violation is reported, a smart contract can automatically apply the penalty or sanction for breaking the regulation.
+As the system is auditable, penalized parties have a full history of what led to their punishment, providing means for them to appeal if there was a mistake.
 
-\subsubsection{Data Sharing}
-One key challenge when sharing data between multiple organizations is that no organization wants to give up ownership and control of their own data.
-Blockchain technology's shared governance model allows all parties to share data while still retaining control of their own data.
-Importantly, it is not the data that is stored on the Blockchain, but rather the access control rules and access attempts.
-The data itself continues to be stored by the organization that owns/controls it.
+%\subsubsection{Fine-grained Access Control}
+%In practice, access control systems are often centralized. They are sometimes nominally distributed -- for example, requiring several written signatures on a form before a system administrator will grant a new permission -- but even these systems are essentially centralized as a single administrator can unilaterally grant nearly any privilege in the system.
+%Blockchain technology's shared governance could allow for true fine-grained and decentralized access control.
+%When permissions are needed, those responsible (and not an administrator) can directly approve the permissions and smart contracts can ensure that the permissions is granted if and only if all necessary approvals are given.
+%Additionally, the provenance information associated with the access control can be used to rollback changes made by users if those users are later shown to have been compromised.
 
-%=== 
-\subsection{Unsuitable Use Cases}
-In this subsection, we describe uses cases that could use Blockchain technology, but most likely should not.
+\subsection{Other use cases}
 
-\subsubsection{Voting}
+\paragraph{Voting}
 Electronic voting is a challenging problem which might benefit from several of Blockchain technology's properties.
 Shared governance could be used to ensure that multiple parties (the government, non-governmental organizations, international watchdogs) can all work together to ensure that an election is legitimate.
 Audibility is important in providing evidence to the electorate that the election was fair.
 Finally, the resilience of Blockchain technology is important in prevent cyber-attacks against the voting system.
 
-\subsubsection{Interoperation}
+\paragraph{Identity and key management}
+Identities along with cryptographic attestations about properties for those identities (e.g., over 18 years of age, has a driver's license) can be written to the Blockchain.
+These identities and attestations can then be used by other systems to support their access control policies.
+Importantly, this identity information comes with full provenance. This could be useful in determine suspicious activity (e.g., having an age that is not increasing linearly).
+This could also be a quicker and more performant way of establishing identity than the current certificate authority system.
+
+\paragraph{Gambling}
+By examining the most active Bitcoin scripts and Ethereum decentralized applications, gambling is popular. Players can audit the game to ensure that execution is fair, and the system can operate its own cryptocurrency to handle the finances (including holding the money in escrow to prevent losing parties from aborting before paying). This use case is best suited to gambling games that do not require randomness, private state, or knowledge of off-blockchain events. For the subset of residual games,\footnote{The most active Ethereum game is called Fomo3D: users pay to reset a 30 second countdown timer and if it ever reaches zero, the last user to pay wins all the money collected.} blockchain is an ideal platform. For the other types of games, new layers of technology would have be added on a Blockchain. Data-feeds (called oracles) of either randomness or real world event outcomes requires additional trust and introduces finality risk, while confidential user state require additional cryptography.  
+
+\paragraph{IoT/Smart Properties}
+IoT devices occasionally have the need to collectively make decisions.
+In these cases, Blockchain technology can provide a technological platform for making these collective decisions in an auditable fashion.
+This auditability is especially important as IoT devices are notoriously untrustworthy due to insufficient security, and the ability to later audit and analyze their actions is invaluable.
+Additionally, the replication inherent to Blockchain technology means that even if a subset of the IoT devices is lost (e.g., destroyed sensors in a storm), it can still be possible to record the entire provenance of all devices.
+
+\paragraph{Interoperation}
 Blockchain technology can facilitate the interoperation of multiples systems.
 It can provide a place for multiple systems to write their data and make requests of other systems.
 Using smart contracts it can convert those requests to the appropriate form to allow them to be parsed by other systems.\
 This is a poor use case because it does not rely on shared governance, consensus, or provenance.
 This use case can more easily be accomplished with a standard program and a database.
 
-\subsubsection{Timetamping}
+\paragraph{Timetamping}
 Blockchain technology could be used to timestamp documents. Still, timestamping generally does not rely on any of Blockchain technologies key properties, and so Blockchain technology is likely overkill for this application.
