--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -63,6 +63,8 @@
 \let\labelindent\relax
 \usepackage{enumitem}
 
+\usepackage{microtype}
+
 %------------------------END----------------------%  
   
 
