--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -2,6 +2,71 @@
 
 \subsection{Academic Literature Review}
 
+% Jeremy: I reclustered this a bit. I think we discussed this during the call. Feel free to debate. 
+% If you want to play around with the clusters: https://drive.google.com/file/d/1gDVd4x-SN6-QHZe52toEzMWXnLfiNtqW/view?usp=sharing
+% I feel like separating challenges and limitations is a bit of a judgement call. 
+
+%Our concept map shows interconnections between features and use cases. We also coded challenges -- both problems hindering the use of Blockchain that do not currently have satisfactory solutions, and inherent deficits of the technology. In this section, we will list the concept groupings we created and we discuss the academic response in the next section.
+%\anote{I really like this list.  But, the challenges in Section~\ref{sec:challenges} only cover a subset of the list (and its not divided in the same way).  Should we aim to cover all the challenges listed here (for many of them, I dont really know what to say)?  We should definitely get the two sections to match up better.}
+%\subsubsection{Technical Challenges}
+%\begin{itemize}
+%	\item{Blockchain can handle finite, countable, and unique resources only}
+%	\item{Blockchain is not a high performance system}
+%	\item{Lack of API access means auditors must run full nodes}
+%	\item{Interoperability: cryptocurrency fragmentation; existence of too many implementations; siloed solutions; standardization; risks to overlay assets if underlying assets are mishandled; interfaces with existing institutions and systems; user identification across systems; risks posed by sharing blockchain security through merged mining or anchoring}	
+%	\item{Susceptibility to coordinated attacks by large parties}
+%	\item{Off-chain functionality: off-chain program execution; interoperability with off-chain systems}
+%	\item{Privacy: anonymity; confidentiality}
+%	\item{Resilience: distributed denial-of-service (DDOS) attacks; dishonest majority attacks; security of infrastructure; subversion of software security measures}		
+%	\item{Scalability: block generation frequency; block size limits; computational cost of public blockchains; scalable and secure end-user software}
+%	\item{Security}
+%	\item{Smart contract correctness: inherent incompleteness of contracts; ensuring completeness; lack of tools for verification}
+%\end{itemize}
+%
+%\subsubsection{Socio-Technical Challenges}
+%\begin{itemize}
+%	\item{Blockchain is an inefficient use of computing resources}
+%	\item{Cryptocurrency economics: illiquidity, price volatility, high initial adoption costs, currency conversion costs, and decreasing marginal returns for miners}
+%	\item{Incentives: correctly configuring game-theoretic incentive structures}
+%	\item{Key management: difficulty of manual key management; possible unrecoverable loss of private keys; attacks against wallets; bugs and glitches in wallets}
+% Text from a different section: The biggest challenge towards key-based ownership of tokens is the need to manage a public key infrastructure (PKI).
+%This is both a hassle technically~\cite{CT} as well as for users~\cite{ruoti2015johnny,barber2012bitter}.
+%	\item{Lack of protection against mistakes: transactions cannot be reversed; administrators cannot restore access if users are locked out}
+%	\item{Miner centralization}
+%	\item{Usability: difficulty of developing distributed apps; inherent complexity of technology; difficulty of access and use by consumers; education; onboarding users; difficulty of search; poor UX; lack of mobile and web clients}
+%\end{itemize}
+%
+%\subsubsection{Challenges to Market Viability}
+%\begin{itemize}
+%	\item{Efficiency and cost: low or bottlenecked throughput; wasteful energy consumption; high transaction fees; latency induced by synchronous communication required by certain consensus protocols}
+%	\item{Expense of developing end-user applications for individual blockchains}
+%	\item{Usefulness: few demonstrable use cases; does not improve upon existing solutions in many domains being pursued}
+%	\item{Unnecessary: if a central party is required; if a trusted intermediary exists; if a small number of parties are involved in the system}
+%\end{itemize}
+%
+%\subsubsection{Use Case Challenges}
+%\begin{itemize}
+%	\item{Binding digital entities to real-world entities: stapling tokens to assets; interoperating with existing systems (e.g., compatibility between cryptocurrencies and cash)}
+%	\item{Dispute resolution: difficulty recovering from errors or bugs; difficulty reversing fraudulent transactions; non-applicability to scenarios where a central broker is needed}
+%\end{itemize}
+%
+%\subsubsection{Regulatory Challenges}
+%\begin{itemize}
+%	\item{Governance: resolution of conflicts requiring external intervention; incident response; rule updates require forks; transparency of software development}
+%	\item{No distinct legal framework}
+%	\item{Standardization}
+%	\item{Regulatory: anti-money laundering, know-your-customer; difficulty of monitoring; lack of regulation; legal considerations; taxation; exchange control and flow management; consumer protection}	
+%	\item{Cryptocurrencies are inherently Ponzi schemes}
+%	\item{Reputation: use for crime; associations with black markets; nebulous or illicit uses; terrorist financing}
+%\end{itemize}
+
+% Jeremy: Arkady -- please see reclustering of previous section and use it to motivate why these are the right subset to study.
+% Is this subset of challenges normative or positive?
+% Normative -- the set of challenges that ought to be studied
+% Positive -- the set of challenges that happened to be studied by others
+
+
+
 \section{Challenges for Blockchain Technology}
 \label{sec:challenges}
 
